compiler_errors/examples/keyword_typo_1.f90
prgram hello
    print *, "Hello, World!"
end program hello
